feat: add testing and simulation endpoints for service health checks

--- a/docker/services/frontend/html/service-nhits.html
+++ b/docker/services/frontend/html/service-nhits.html
@@ -493,6 +493,25 @@
                     <span class="endpoint-desc">CPU/GPU/Memory Metriken</span>
                 </div>
             </div>
+
+            <h3 style="font-size: 1rem; margin: 1.5rem 0 0.5rem; opacity: 0.8;">Testing & Simulation (3 Endpoints)</h3>
+            <div class="endpoint-list">
+                <div class="endpoint">
+                    <span class="method post">POST</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Service für 5 Min als unhealthy markieren (Test)</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method">GET</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status abfragen</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method delete">DEL</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status zurücksetzen</span>
+                </div>
+            </div>
         </div>
 
         <div class="content-card">
