--- a/docker/services/frontend/html/service-watchdog.html
+++ b/docker/services/frontend/html/service-watchdog.html
@@ -533,6 +533,25 @@
                 </div>
             </div>
 
+            <h3 style="margin-top: 1.5rem; margin-bottom: 1rem; color: #f472b6;">Service-Ausfall-Simulation (3 Endpoints)</h3>
+            <div class="endpoint-list">
+                <div class="endpoint">
+                    <span class="method post">POST</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Watchdog für 5 Min als unhealthy markieren</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method">GET</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status abfragen</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method delete">DEL</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status zurücksetzen</span>
+                </div>
+            </div>
+
             <h3 style="margin-top: 1.5rem; margin-bottom: 1rem; color: #f472b6;">Testing-Endpunkte (10 Endpoints)</h3>
             <div class="endpoint-list">
                 <div class="endpoint">
