--- a/docker/services/frontend/html/service-embedder.html
+++ b/docker/services/frontend/html/service-embedder.html
@@ -558,6 +558,25 @@
                 </div>
             </div>
 
+            <h3 style="font-size: 1rem; margin: 1.5rem 0 0.5rem; opacity: 0.8;">Testing & Simulation (3 Endpoints)</h3>
+            <div class="endpoint-list">
+                <div class="endpoint">
+                    <span class="method post">POST</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Service für 5 Min als unhealthy markieren (Test)</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method">GET</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status abfragen</span>
+                </div>
+                <div class="endpoint">
+                    <span class="method delete">DEL</span>
+                    <span class="endpoint-path">/api/v1/test-unhealthy</span>
+                    <span class="endpoint-desc">Test-Unhealthy-Status zurücksetzen</span>
+                </div>
+            </div>
+
             <div class="info-box" style="margin-top: 1.5rem;">
                 <strong>Vollständige API:</strong> Über 15 Endpoints für Text-, TimeSeries- und Feature-Embeddings.
                 Siehe <a href="/embedder/docs" target="_blank" style="color: #64c8ff;">/embedder/docs</a> für die interaktive Swagger-Dokumentation.
